# qcloud

./: CMakeLists.txt  README.md  config.h.in
backend/: CMakeLists.txt
backend/dropbox/: CMakeLists.txt  dropbox.cpp  dropbox.h  dropbox_test.cpp  dropboxrequest.cpp  dropboxrequest.h  plugin.cpp  plugin.h
cmake/: FindQCA2.cmake  FindQOAuth.cmake
daemon/: CMakeLists.txt  account.cpp  account.h  accountmanager.cpp  accountmanager.h  daemon.cpp  daemon.h  dbmanager.cpp  dbmanager.h  main.cpp  org.qcloud.daemon.service.in  service.cpp  service.h
data/: CMakeLists.txt  testapp
include/: CMakeLists.txt  accountinfo.h  app.h  appmanager.h  appmanager_p.h  authdialog.h  authwidget.h  client.h  client_p.h  encrypter.h  encrypter_p.h  entryinfo.h  factory.h  factory_p.h  ibackend.h  ibackend_p.h  info.h  ipackager.h  iplugin.h  isecurestore.h  isecurestorewidget.h  oauthbackend.h  oauthbackend_p.h  oauthwidget.h  oauthwidget_p.h  packager.h  qcloud_utils.h  reply.h  request.h  requesthandler.h  server.h  server_p.h  types.h  utils.h
include/QtCloud/: App  AppManager  AuthDialog  AuthWidget  Client  EntryInfo  Factory  IBackend  IPlugin  ISecureStore  Info  OAuthBackend  OAuthWidget  Packager  QtCloud  Reply  Server  Utils
kio/: CMakeLists.txt  cloud.protocol  kio_cloud.cpp  kio_cloud.h  requestwatcher.cpp  requestwatcher.h
lib/: CMakeLists.txt  accountinfo.cpp  app.cpp  appmanager.cpp  authdialog.cpp  authorizewidget.cpp  authorizewidget.h  authorizewidget.ui  authwidget.cpp  authwidget.h  client.cpp  client.h  client_p.h  daemon.xml  encrypter.cpp  entryinfo.cpp  factory.cpp  factory.h  factory_p.h  ibackend.cpp  ibackend.h  info.cpp  ipackager.cpp  iplugin.cpp  iplugin.h  isecurestore.cpp  isecurestore.h  isecurestorewidget.cpp  isecurestorewidget.h  networkaccessmanager.cpp  networkaccessmanager.h  oauthbackend.cpp  oauthbackend.h  oauthwidget.cpp  oauthwidget.h  oauthwidget.ui  oauthwidget_p.h  packager.cpp  qcloud_global.h  reply.cpp  (+8 more)
network/: CMakeLists.txt
network/general/: CMakeLists.txt  networkaccessmanager.cpp  networkaccessmanager.h  plugin.cpp  plugin.h
network/kde/: CMakeLists.txt  kdenetworkaccessmanager.cpp  kdenetworkaccessmanager.h  plugin.cpp  plugin.h
securestore/: CMakeLists.txt  isecurestorewidget.cpp
securestore/kwallet/: CMakeLists.txt  kwallet.cpp  kwallet.h  kwallet_test.cpp  kwalletstore.cpp  kwalletstore.h  plugin.cpp  plugin.h
securestore/plain/: CMakeLists.txt  plainstore.cpp  plainstore.h  plugin.cpp  plugin.h
tests/: CMakeLists.txt
tests/dateparse/: CMakeLists.txt  dateparse_test.cpp
tests/dropbox/: CMakeLists.txt  dropbox_test.cpp
tests/encrypter/: CMakeLists.txt  encrypter_test.cpp
tests/packager/: CMakeLists.txt  packager_test.cpp
tests/securestore/: CMakeLists.txt  kwallet_test.cpp  securestorewidget.cpp  securestorewidget.h
tool/: CMakeLists.txt  accountdialog.cpp  accountdialog.h  accountdialog.ui  clientapp.cpp  clientapp.h  entryinfomodel.cpp  entryinfomodel.h  infomodel.cpp  infomodel.h  main.cpp  mainwindow.cpp  mainwindow.h  tool.ui
